--- a/templates/messages.html
+++ b/templates/messages.html
@@ -74,9 +74,9 @@
             <a href="/">Learn Python</a> 
         </h2>
         <ul>
-            <li><a href="#1">Повідомлення</a>
-            <li><a href="#2">Статистика</a>
-            <li><a href="#3">Розсилка</a>
+            <li><a href="/messages">Повідомлення</a><br>
+            <li><a href="/statistics">Статистика</a><br>
+            <li><a href="/mailing">Розсилка</a>
         </ul></nav>	
         <header>
 		<nav class="row blue-grey darken-3">
@@ -115,12 +115,6 @@
 						{%endfor%}
 					</div>
             </div>
-            <img src="{{ url_for('static', filename='img/menuIcon.png') }}""  class = "burger_trigger" alt="" onclick='burger()'>
-            <ul class="menu"  onclick='burger()'>
-                <li><a class="white-text" href="/messages">Повідомлення</a></li>
-                <li><a class="white-text" href="/statistics">Статистика</a></li>
-                <li><a class="white-text" href="/mailing">Розсилка</a></li>
-            </ul>
 
 
 				</div>
