--- a/static/css/style.css
+++ b/static/css/style.css
@@ -140,56 +140,7 @@ nav img {
     display: none;
 }
 
-@media only screen and (max-width: 600px) {
-    #signup,#modChange{
-        width: 80%;
-    }
-    .brand-logo{
-        margin-left: 60px;
-        font-size: 10px;
-    }
-    .mobileGlist{
-        display: none;
-    }
-    #showGroupListMob{
-        display: block;
-    }
-    .burger_trigger{
-        top: 5px;
-        width: 45px;
-    }
-    .menu,.menu_opened{
-        top:55px;
-        padding-top: 0px;
-        margin-top: 0;
-        z-index: 100;
-    }
-    #profile{
-        width: 90%;
-        height: 90%;
-    }
-    #userLogin,#userUsername,#userEmail{
-        font-size: 15px;
-    }
-    #profileIcon{
-        width: 100%;
-        height: 100%;
-    }
-    #menuContent{
-        width: 100%;
-        position: absolute;
-        z-index: 100;
-        border-left: 0;
-    }
-}
-@media only screen and (max-width: 900px) {
-    #menuContent{
-        width: 100%;
-        position: absolute;
-        border-left: 0;
-        height: 100%;
-    }
-}
+
 
 .nav {
     /*  ширна произвольная, не стесняйтесь экспериментировать */
@@ -350,26 +301,6 @@ body {
  * позаботьтимся о средних и маленьких экранах
  * мобильных устройств
  */
-
-@media screen and (min-width: 320px) {
-    html,
-    body {
-      margin: 0;
-      overflow-x: hidden;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    html,
-    body {
-      margin: 0;
-      overflow-x: hidden;
-    }
-    .nav {
-      width: 100%;
-      box-shadow: none
-    }
-}
 
 
 /**
@@ -553,4 +484,69 @@ body {
     background: transparent;
     -webkit-transition: width 0s ease;
     transition: width 0s ease;
+}
+
+@media only screen and (max-width: 600px) {
+    #signup,#modChange{
+        width: 80%;
+    }
+    .brand-logo{
+        margin-left: 60px;
+        font-size: 10px;
+    }
+    .mobileGlist{
+        display: none;
+    }
+    #showGroupListMob{
+        display: block;
+    }
+    .burger_trigger{
+        top: 5px;
+        width: 45px;
+    }
+    .menu,.menu_opened{
+        top:55px;
+        padding-top: 0px;
+        margin-top: 0;
+        z-index: 100;
+    }
+    #profile{
+        width: 90%;
+        height: 90%;
+    }
+    #userLogin,#userUsername,#userEmail{
+        font-size: 15px;
+    }
+    #profileIcon{
+        width: 100%;
+        height: 100%;
+    }
+    #menuContent{
+        width: 100%;
+        position: absolute;
+        z-index: 100;
+        border-left: 0;
+    }
+    html,
+    body {
+      margin: 0;
+      overflow-x: hidden;
+    }
+    .nav {
+      width: 100%;
+      box-shadow: none
+    }
+}
+@media only screen and (min-width: 900px) {
+    #menuContent{
+        width: 100%;
+        position: absolute;
+        border-left: 0;
+        height: 100%;
+    }
+    html,
+    body {
+      margin: 0;
+      overflow-x: hidden;
+    }
 }
