--- a/templates/messages.html
+++ b/templates/messages.html
@@ -36,12 +36,24 @@
 	});
 
 	function getUserMSG(objButton,user_but){
-		$('#buts_send').children().hide();
-		$('#chat-messages').children().hide();
-		$('#'+user_but).show();
-		$('#'+user_but+'_form').show();
+		if (window.matchMedia('only screen and (max-width: 600px)').matches) {
+    		$('#buts_send').children().hide();
+			$('#chat-messages').children().hide();
+			$('#userstab').hide();
+			$('.mobileGlist').show();
+			$('#'+user_but).show();
+			$('#'+user_but+'_form').show();
+   			$('#chat-messages').animate({ scrollTop: $('#'+user_but).height() }, "slow");
+		}
+		else{
+			$('#buts_send').children().hide();
+			$('#chat-messages').children().hide();
+			$('#'+user_but).show();
+			$('#'+user_but+'_form').show();
 
-   		$('#chat-messages').animate({ scrollTop: $('#'+user_but).height() }, "slow");
+   			$('#chat-messages').animate({ scrollTop: $('#'+user_but).height() }, "slow");
+		}
+		
 
 	};
 
@@ -79,7 +91,7 @@
 	</header>
 	<main>
 		<div class="row">
-			<div class="col l2 m4 s12">
+			<div class="col l2 m4 s12" id ="userstab">
 				<div class="card horizontal blue-grey darken-3">
 					<div id="data" class="card-content blue-grey darken-3 col s12">
 						{% for key,val in users.items() %}
