--- a/templates/messages.html
+++ b/templates/messages.html
@@ -44,6 +44,7 @@
 			$('#'+user_but).show();
 			$('#'+user_but+'_form').show();
    			$('#chat-messages').animate({ scrollTop: $('#'+user_but).height() }, "slow");
+   			$('.nav-wrapper').append("<img id = \"back_array\"src=\""+{{ url_for('static', filename='img/arr.png') }}+"class = \"burger_trigger\"  onclick=\'onBackTap()\'>");
 		}
 		else{
 			$('#buts_send').children().hide();
@@ -56,7 +57,12 @@
 		
 
 	};
+	function onBackTap(){
+		$('back_array').remove();
+		$('.mobileGlist').hide();
+		$('#userstab').show();
 
+	}
 	function send_message(obj){
 		socket.emit('send_message', {user_id: obj.id.split('_form')[0], message_text: obj.msg_text.value});
 		obj.msg_text.value='';
@@ -70,6 +76,7 @@
             });
         };
 </script>
+
 <body class="blue-grey darken-4" class="nav">
 	<input type="checkbox" id="nav-toggle" hidden>
     <nav class="nav">
