--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -52,7 +52,7 @@
 	</header>
 	<main>
 		<div class="col 12 ">
-		<div class="row align-middle ">
+		<div class="row align-middle justify-content-center">
 		<div class="col 12 ">
 			<h2  class="brand-logo white-text">Статистика тестів:</h2>
 			<div class="card horizontal">
