--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -45,7 +45,7 @@
 	<header>
 		<nav class="row blue-grey darken-3">
 			<div class="nav-wrapper col m10 s12">
-				<a href="/" class="brand-logo col s8 offset-s4 m4">Learn Python</a>
+				<a href="/" class="brand-logo col s8 offset-s4 m8 offset-m4 col l12">Learn Python</a>
 			</div>
 
 		</nav>
